methods.basics.MethodsDogHouse.scala.code
def brique()
{
  avance()
  avance()
  guache()
}
for(i <- 1 to 4)
	brique()